--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@strapi/plugin-i18n": "4.15.5",
     "@strapi/plugin-users-permissions": "4.15.5",
     "@strapi/strapi": "4.15.5",
+    "crypto-js": "^4.2.0",
     "pg": "8.8.0",
+    "razorpay": "^2.9.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
